# Lumina

./: .gitignore  CLAUDE.md  LICENSE  README.md  gemma_requests.jsonl  pyproject.toml
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
assets/: lumina.icns
docs/: README.md  architecture.md  configuration.md  digest-collector-plugin.md  evolution-plan-v1.md  inference-engine.md  lumina-buddy-spec.md  mlx-memory-offload.md  performance-report.md  providers-and-engine.md  readme-showcase.html  web-ui-htmx.md
lumina/: config.json  config.lite.json  config.py  config_apply.py  config_runtime.py  main.py  pdf_cache.py  pdf_summarize.py  pdf_translate.py  platform_utils.py  popup.py  ptt.py  sampling.py  text_polish.py  ui_meta.py  watcher.py
lumina/api/: chat_runtime.py  protocol.py  server.py  sse.py  ui_meta.py
lumina/api/routers/: audio.py  chat.py  config.py  digest.py  document.py  fragments.py  game.py  media.py  pdf.py  text.py  vision.py
lumina/api/static/: index.html  input.css  style.css
lumina/api/static/js/: app-bootstrap.js  buddy-core.js  home-tabs.js  modal-ui.js  pet-data.js  settings-ui.js  workspace-core.js
lumina/api/templates/: config_form.html  digest_content.html  digest_sources.html  index.html  pdf_error.html  pdf_progress.html  pdf_result.html  report_content.html
lumina/api/templates/panels/: audio.html  digest.html  document.html  game.html  lab.html  settings.html  stats.html  summarize.html  translate.html
lumina/asr/: __init__.py  live.py  recorder.py  transcriber.py
lumina/batch/: manager.py
lumina/cli/: pdf.py  server.py  setup.py  text.py  utils.py
lumina/digest/: __init__.py  collectors.py  config.py  core.py  cursor_store.py  reports.py
lumina/digest/collectors/: __init__.py  files.py
lumina/engine/: __init__.py  llm.py  request_context.py  request_history.py  sampling.py  scheduler.py  token_counter.py  update_check.py
lumina/platform_support/: platform_utils.py  popup.py
lumina/providers/: __init__.py  base.py  inference_queue.py  llama_cpp.py  local.py  local_vlm.py  message_parts.py  mlx_loader.py  mlx_prompt.py  openai.py  scheduler.py  system_prompt_cache.py
lumina/providers/mlx/: __init__.py  loader.py  offload.py  prompt.py  scheduler.py  system_prompt_cache.py  vlm.py
lumina/services/: pdf.py
lumina/services/audio/: __init__.py  live.py  ptt.py  recorder.py  transcriber.py
lumina/services/digest/: __init__.py  config.py  core.py  cursor_store.py  reports.py  scheduler.py
lumina/services/digest/collectors/: __init__.py  apps.py  base.py  files.py  system.py
lumina/services/document/: pdf.py  pdf_cache.py  pdf_summarize.py  pdf_translate.py  text_polish.py  watcher.py
lumina/services/vision/: __init__.py  core.py
scripts/: benchmark_local_provider.py  build.sh  build_full.sh  build_lite.sh  build_macos.sh  bump_version.py  dump_model_layers.py  install.ps1  install.sh  install_full.sh  install_linux.sh  install_lite.sh  install_macos.sh  install_quick_action.sh  install_windows.ps1  lumina_file_action.py  lumina_full.spec  ptt.py  release_notes.md
tests/: config_helpers.py  test_digest.py  test_index_html.py  test_local_provider_batching.py
tests/api/: test_batch_manager.py  test_config_router.py  test_pdf_service.py  test_server_api.py  test_sse.py
tests/benchmarks/: engine_performance.py  http_bench.py  provider_throughput.py  run_matrix.py  utils.py
tests/cli/: test_config.py  test_config_runtime.py  test_popup.py
tests/providers/: local_provider_test_helpers.py  test_local_provider_batching.py  test_local_provider_loading.py  test_local_provider_scheduling.py  test_local_provider_vlm_messages.py  test_mlx_batch_scheduler.py  test_mlx_model_loader.py  test_mlx_vlm_adapter.py  test_openai_provider.py  test_provider_capabilities.py  test_sampling.py  test_system_prompt_cache.py
tests/security/: test_index_html.py
tests/services/digest/: test_digest.py
tests/unit/: test_config.py  test_config_router.py  test_sampling.py
