[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lumina"
version = "0.8.5"
description = "Local LLM service for translation, summarization and speech transcription"
license = {text = "MIT"}
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7",
    "sounddevice>=0.4.7",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "transformers>=4.45.0",
    "huggingface_hub>=0.24.0",
    "aiohttp>=3.13.5",
    "pdf2zh>=1.9.0",
    "watchdog>=3.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "pynput>=1.8.1",
    # macOS（Apple Silicon）专属推理 / ASR / 菜单栏
    "mlx>=0.18.0; sys_platform == 'darwin'",
    "mlx-lm>=0.12.0; sys_platform == 'darwin'",
    "mlx-whisper>=0.2.0; sys_platform == 'darwin'",
    "rumps>=0.4.0; sys_platform == 'darwin'",
    # 非 macOS 本地推理 / ASR
    "llama-cpp-python>=0.2.90; sys_platform != 'darwin'",
    "faster-whisper>=1.0.0; sys_platform != 'darwin'",
    "pywebview>=6.1",
    "markdown>=3.6",
    "jinja2>=3.1",
    "mlx-vlm>=0.4.4 ; sys_platform == 'darwin'",
    "torchvision>=0.26.0 ; sys_platform == 'darwin'",
    "nh3>=0.3.4",
    "sse-starlette>=3.3.4",
    "mlx-lm>=0.31.2",
]

[project.optional-dependencies]
dev = ["black", "isort", "pyinstaller", "pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27.0"]

[project.scripts]
lumina = "lumina.main:main"

[tool.setuptools.packages.find]
include = ["lumina*"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "asyncio: legacy async test marker kept for compatibility",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
