[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lumina"
version = "0.9.0"
description = "Local LLM service for translation, summarization and speech transcription"
license = {text = "MIT"}
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7",
    "numpy>=1.26.0",
    "aiohttp>=3.13.5",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "markdown>=3.6",
    "jinja2>=3.1",
    "nh3>=0.3.4",
    "sse-starlette>=3.3.4",
]

[project.optional-dependencies]
model-download = ["huggingface-hub==1.11.0"]
local-macos = [
    "huggingface-hub==1.11.0",
    "mlx>=0.30.0; sys_platform == 'darwin'",
    "mlx-lm>=0.31.2; sys_platform == 'darwin'",
    "mlx-vlm>=0.4.4; sys_platform == 'darwin'",
    "mlx-whisper>=0.2.0; sys_platform == 'darwin'",
    "torchvision>=0.26.0; sys_platform == 'darwin'",
    "rumps>=0.4.0; sys_platform == 'darwin'",
]
local-llama = [
    "huggingface-hub==1.11.0",
    "llama-cpp-python>=0.2.90; sys_platform != 'darwin'",
]
audio = [
    "faster-whisper>=1.0.0; sys_platform != 'darwin'",
    "pynput>=1.8.1",
    "scipy>=1.13.0",
    "sounddevice>=0.4.7",
]
pdf = [
    "pdf2zh>=1.9.0",
    "watchdog>=3.0",
]
desktop = ["pywebview>=6.1"]
full = [
    "huggingface-hub==1.11.0",
    "mlx>=0.30.0; sys_platform == 'darwin'",
    "mlx-lm>=0.31.2; sys_platform == 'darwin'",
    "mlx-vlm>=0.4.4; sys_platform == 'darwin'",
    "mlx-whisper>=0.2.0; sys_platform == 'darwin'",
    "torchvision>=0.26.0; sys_platform == 'darwin'",
    "rumps>=0.4.0; sys_platform == 'darwin'",
    "llama-cpp-python>=0.2.90; sys_platform != 'darwin'",
    "faster-whisper>=1.0.0; sys_platform != 'darwin'",
    "pynput>=1.8.1",
    "scipy>=1.13.0",
    "sounddevice>=0.4.7",
    "pdf2zh>=1.9.0",
    "watchdog>=3.0",
    "pywebview>=6.1",
]
dev = ["black", "isort", "pyinstaller", "pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27.0"]

[project.scripts]
lumina = "lumina.main:main"

[tool.setuptools.packages.find]
include = ["lumina*"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not slow'"
markers = [
    "asyncio: legacy async test marker kept for compatibility",
    "slow: tests that require a local model or heavy resources; excluded by default",
]
filterwarnings = [
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

